* Abstract factory pattern alkalmazása a figyelőkre a könnyebb bővíthetőség érdekében * Diagramok