@@ -3,32 +3,46 @@ package hu.hwmon.gui;
 import hu.hwmon.dto.MemoriaAllapot;
 
 import java.awt.*;
-import java.util.Arrays;
 import java.util.List;
 
 
 public class SwapIkon extends TaskbarIkon<MemoriaAllapot> {
-    private static final Color[] szinek = new Color[] {
-        Color.RED,
-        new Color(50, 110, 255),
-        new Color(200, 255, 0),
-        Color.BLACK
-    };
+    @Override
+    protected String getDiagramErtekTemplate() {
+        return "%s (%2$,.0f Mb)";
+    }
 
     @Override
-    protected List<Double> formatter(MemoriaAllapot adat) {
-        return Arrays.asList(
-            adat.swapActiveAnon(),
-            adat.swapInactive(),
-            adat.swapCache(),
-            adat.swapFree()
+    protected String getTitle() {
+        return "Swap diagram";
+    }
+
+    @Override
+    protected List<SavMetaAdatok<MemoriaAllapot>> getSavMetaAdatok() {
+        return List.of(
+            new SavMetaAdatok<>(
+                "Aktív",
+                MemoriaAllapot::swapActiveAnon,
+                Color.RED
+            ),
+            new SavMetaAdatok<>(
+                "Inaktív",
+                MemoriaAllapot::swapInactive,
+                new Color(50, 110, 255)
+            ),
+            new SavMetaAdatok<>(
+                "Swap cached",
+                MemoriaAllapot::swapCache,
+                new Color(200, 255, 0)
+            ),
+            new SavMetaAdatok<>(
+                "Szabad",
+                MemoriaAllapot::swapFree,
+                Color.BLACK
+            )
         );
     }
 
-    @Override
-    protected Color[] szinek() {
-        return szinek;
-    }
 
     @Override
     protected String getToolTip(MemoriaAllapot adat) {
